removed border from articleListItem in /help/articles + lowered z-index of arrival-info to be beneath the instructions-panel + fixed userPuck transform: translate bug + added isAutoSnap logic in map.js + fixed distance bug in arrival-info

--- a/src/app/help/(nestedhelp)/articles/articles.module.css
+++ b/src/app/help/(nestedhelp)/articles/articles.module.css
@@ -18,7 +18,7 @@
 }
 
 .articleListItem {
-  border: 1px solid #333;
+  border: none;
   border-radius: 8px;
   margin-bottom: 15px;
   transition: all 0.2s ease-in-out;
