--- a/src/components/Map/arrival-info.module.css
+++ b/src/components/Map/arrival-info.module.css
@@ -3,7 +3,7 @@
   bottom: 3%;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 1000;
+  z-index: 999;
 
   width: auto;
   max-width: calc(100% - 2rem);
